--- a/Project.toml
+++ b/Project.toml
@@ -6,6 +6,7 @@ version = "0.1.0"
 [deps]
 HTTP = "cd3eb016-35fb-5094-929b-558a96fad6f3"
 JSON = "682c06a0-de6a-54ab-a142-c8b1cf79cde6"
+Pkg = "44cfe95a-1eb2-52ea-b672-e2afdf69b78f"
 Plugin = "8c5b3f35-d937-42f1-aed2-532bd2edee11"
 Pluto = "c3e4b0f8-55cb-11ea-2926-15256bba5781"
 PlutoBoard = "447e6095-edb7-4c27-ab1f-4a324c08f539"
@@ -14,5 +15,6 @@ Sockets = "6462fe0b-24de-5631-8697-dd941f90decc"
 [compat]
 HTTP = "1.10.14"
 JSON = "0.21.4"
+Pkg = "1.11.0"
 Pluto = "0.20.3"
 Sockets = "1.11.0"
